bugfix header: https://www.w3schools.com/csSref/pr_pos_z-index.php

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,6 +17,7 @@ header {
     background-color: azure;
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 
 header > h1 {
